--- a/DP/css/style.css
+++ b/DP/css/style.css
@@ -60,13 +60,57 @@ header h1 {
   font-size: 4.8rem;
   text-align: center;
 }
-@media only screen and (min-width: 1170px) {
+
+
+
+@media only screen and (min-width: 300px) {
   header {
-    height: 300px;
+    height: 200px;
     line-height: 40px;
   }
   header h1 {
     font-size: 5rem;
+    font-weight: 500;
+  }
+}
+
+@media only screen and (min-width: 400px) {
+  header {
+    height: 230px;
+    line-height: 40px;
+  }
+  header h1 {
+    font-size: 5rem;
+    font-weight: 500;
+  }
+}
+
+
+@media only screen and (min-width: 500px) {
+  header {
+    height: 250px;
+    line-height: 40px;
+  }
+  header h1 {
+    font-size: 5rem;
+    font-weight: 500;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  header {
+    height: 280px;
+    line-height: 40px;
+  }
+  header h1 {
+    font-size: 5rem;
+    font-weight: 500;
+  }
+}
+
+@media only screen and (max-width: 1170px) {
+  header h1 {
+    font-size: 28px;
     font-weight: 500;
   }
 }
@@ -166,7 +210,7 @@ header h1 {
     font-size: 2rem;
     line-height: 2;
   }
-}
+
 
 .cd-modal-action {
   position: relative;
